# BinScrapper

./: .gitignore  BinDatabase.py  BinScraper.py  README.md  bin-cli  bin_checker.py  bin_cli.py  bin_database.db  pyproject.toml  requirements.txt  save_to_csv.py  scrap_all_banks_bins.py  scrap_all_banks_urls.py
bin_manager/app/: main.py  scraping_worker.py  state.py  url_collection_worker.py
bin_manager/app/static/js/: app.js
bin_manager/app/templates/: index.html
bin_manager/cli/: check_bin.py  collect_urls.py  main.py  save_to_csv.py  scrap_bins.py
bin_manager/db/: database.py  schema.sql
bin_manager/scraper/: scraper.py
